tempaltes.js hinzugefügt

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Store</title>
+    <title>Bücher Burg</title>
     <link rel="icon" sizes="32x32" href="./assets/img/Logo_favicon.png">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/standard.css"> 
     <script src="./scripts/script.js"defer></script>
+    <script src="./scripts/templates.js"></script>
     
 </head>
 
@@ -16,7 +17,7 @@
     
     <header>
             <section class="container_limit">                   
-                        <img class="logo" src="./assets/img/Logo-white.png" alt="Bücher Burg Logo">                         
+                <img class="logo" src="./assets/img/Logo-white.png" alt="Bücher Burg Logo">                         
             </section> 
     </header>
 
@@ -30,12 +31,10 @@
         </section>    
     </main>
  
-
     <footer>   
-
         <section class="container_limit footer_flexbox">
-                        <img class="logo" src="./assets/img/Logo-white.png" alt="Book Store Logo">
-                        <img class="copyright" src="./assets/img/copyright-white.png" alt="Copyright">
+            <img class="logo" src="./assets/img/Logo-white.png" alt="Bücher Burg Logo">
+            <img class="copyright" src="./assets/img/copyright-white.png" alt="Copyright">
         </section>   
     </footer>
    
@@ -43,14 +42,13 @@
             <div class="modal_content">
                 <span class="close_button">&times;</span>
                 <h2>Kommentare</h2>
-                    <form id="comment_form">
+                    <form id="comment_form" class="comment_form">
                     <input type="text" id="comment_name" placeholder="Name" required>
-                    <input type="text" id="comment_text" placeholder="Kommentar" required>
+                    <textarea id="comment_text" placeholder="Kommentar" required></textarea>
                     <button type="submit" class="comment_button">Kommentar hinzufügen</button>
             </form>
                 <div id="modalComments"></div>
+            </div>
         </div>
-
-
 </body>
 </html>
