--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img class="logo" src="./assets/img/Logo-white.png" alt="Bücher Burg Logo">
             <div class="icon_container">
                 <img class="copyright" src="./assets/img/copyright-white.png" alt="Copyright">
-                <p class="copyright">2025 - Refiye</p>
+                <p class="name">2025-Refiye</p>
             </div>
         </section>   
     </footer>
